--- a/Zippy1981.Datadog.WebApi/appsettings.Development.json
+++ b/Zippy1981.Datadog.WebApi/appsettings.Development.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Serilog": {
+        "WriteTo:1":     
+        {
+            "Name": "Console",
+            "Args": {
+                "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
+                "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
+            }
+        }
     }
-  }
 }
